--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -17,8 +17,7 @@ params {
             gtf               = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Annotation/Genes/genes.bed"
             readme            = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Annotation/README.txt"
-            snpeff_db         = 87
-            snpeff_genome     = 'GRCh37'
+            snpeff_db         = 'GRCh37.87'
             vep_cache_version = 111
             vep_genome        = 'GRCh37'
             vep_species       = 'homo_sapiens'
@@ -28,8 +27,7 @@ params {
             star              = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/STARIndex/"
             gtf               = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.bed"
-            snpeff_db         = 105
-            snpeff_genome     = 'GRCh38'
+            snpeff_db         = 'GRCh38.105'
             vep_cache_version = 110
             vep_genome        = 'GRCh38'
             vep_species       = 'homo_sapiens'
@@ -45,8 +43,7 @@ params {
             gtf               = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Annotation/Genes/genes.bed"
             readme            = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Annotation/README.txt"
-            snpeff_db         = 99
-            snpeff_genome     = 'GRCm38'
+            snpeff_db         = 'GRCm38.99'
             vep_cache_version = 102
             vep_genome        = 'GRCm38'
             vep_species       = 'mus_musculus'
@@ -71,8 +68,7 @@ params {
             gtf               = "${params.igenomes_base}/Bos_taurus/Ensembl/UMD3.1/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Bos_taurus/Ensembl/UMD3.1/Annotation/Genes/genes.bed"
             readme            = "${params.igenomes_base}/Bos_taurus/Ensembl/UMD3.1/Annotation/README.txt"
-            snpeff_db         = 75
-            snpeff_genome     = 'UMD3.1'
+            snpeff_db         = 'UMD3.1.1.75'
             vep_cache_version = 94
             vep_genome        = 'UMD3.1'
             vep_species       = 'bos_taurus'
@@ -82,8 +78,7 @@ params {
             star              = "${params.igenomes_base}/Caenorhabditis_elegans/Ensembl/WBcel235/Sequence/STARIndex/"
             gtf               = "${params.igenomes_base}/Caenorhabditis_elegans/Ensembl/WBcel235/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Caenorhabditis_elegans/Ensembl/WBcel235/Annotation/Genes/genes.bed"
-            snpeff_db         = 105
-            snpeff_genome     = 'WBcel235'
+            snpeff_db         = 'WBcel235.105'
             vep_cache_version = 111
             vep_genome        = 'WBcel235'
             vep_species       = 'caenorhabditis_elegans'
@@ -94,8 +89,7 @@ params {
             gtf               = "${params.igenomes_base}/Canis_familiaris/Ensembl/CanFam3.1/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Canis_familiaris/Ensembl/CanFam3.1/Annotation/Genes/genes.bed"
             readme            = "${params.igenomes_base}/Canis_familiaris/Ensembl/CanFam3.1/Annotation/README.txt"
-            snpeff_db         = 99
-            snpeff_genome     = 'CanFam3.1'
+            snpeff_db         = 'CanFam3.1.99'
             vep_cache_version = 104
             vep_genome        = 'CanFam3.1'
             vep_species       = 'canis_lupus_familiaris'
@@ -176,8 +170,7 @@ params {
             star              = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/R64-1-1/Sequence/STARIndex/"
             gtf               = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/R64-1-1/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/R64-1-1/Annotation/Genes/genes.bed"
-            snpeff_db         = 105
-            snpeff_genome     = 'R64-1-1'
+            snpeff_db         = 'R64-1-1.105'
             vep_cache_version = 111
             vep_genome        = 'R64-1-1'
             vep_species       = 'saccharomyces_cerevisiae'
@@ -214,8 +207,7 @@ params {
             star              = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Sequence/STARIndex/"
             gtf               = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Annotation/Genes/genes.bed"
-            snpeff_db         = 105
-            snpeff_genome     = 'GRCh38'
+            snpeff_db         = 'GRCh38.105'
             vep_cache_version = 111
             vep_genome        = 'GRCh38'
             vep_species       = 'homo_sapiens'
@@ -226,8 +218,7 @@ params {
             gtf               = "${params.igenomes_base}/Homo_sapiens/UCSC/hg19/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Homo_sapiens/UCSC/hg19/Annotation/Genes/genes.bed"
             readme            = "${params.igenomes_base}/Homo_sapiens/UCSC/hg19/Annotation/README.txt"
-            snpeff_db         = 87
-            snpeff_genome     = 'GRCh37'
+            snpeff_db         = 'GRCh37.87'
             vep_cache_version = 111
             vep_genome        = 'GRCh37'
             vep_species       = 'homo_sapiens'
@@ -238,8 +229,7 @@ params {
             gtf               = "${params.igenomes_base}/Mus_musculus/UCSC/mm10/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Mus_musculus/UCSC/mm10/Annotation/Genes/genes.bed"
             readme            = "${params.igenomes_base}/Mus_musculus/UCSC/mm10/Annotation/README.txt"
-            snpeff_db         = 99
-            snpeff_genome     = 'GRCm38'
+            snpeff_db         = 'GRCm38.99'
             vep_cache_version = 102
             vep_genome        = 'GRCm38'
             vep_species       = 'mus_musculus'
