--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -1,11 +1,21 @@
 name: Run nf-test
 on:
   push:
-    branches:
-      # https://docs.renovatebot.com/key-concepts/automerge/#branch-vs-pr-automerging
-      - "renovate/**" # branches Renovate creates
+    paths-ignore:
+      - "docs/**"
+      - "**/meta.yml"
+      - "**/*.md"
+      - "**/*.png"
+      - "**/*.svg"
   pull_request:
-    branches: [dev]
+    paths-ignore:
+      - "docs/**"
+      - "**/meta.yml"
+      - "**/*.md"
+      - "**/*.png"
+      - "**/*.svg"
+  release:
+    types: [published]
   workflow_dispatch:
     inputs:
       runners:
