--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -4,7 +4,7 @@ lint:
 nf_core_version: 3.2.0
 repository_type: pipeline
 template:
-  author: Praveen Raj, Maxime U Garcia
+  author: Praveen Raj, Maxime U Garcia, Nicolas Vannieuwkerke
   description: GATK4 RNA variant calling pipeline
   force: false
   is_nfcore: true
