--- a/tests/nextflow.config
+++ b/tests/nextflow.config
@@ -4,7 +4,7 @@
 ========================================================================================
 */
 
-// TODO nf-core: Specify any additional parameters here
+// Specify any additional parameters here
 // Or any resources requirements
 params.modules_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/'
 params.pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/refs/heads/rnavar'
