--- a/tests/.nftignore
+++ b/tests/.nftignore
@@ -1,7 +1,8 @@
 .DS_Store
-annotation/test/*.ann.vcf.{gz,gz.tbi}
+annotation/**/*.vcf.{gz,gz.tbi}
 fastqc/*_fastqc.{html,zip}
 pipeline_info/*.{html,json,txt,yml}
+preprocessing/**/*.{bam,bam.bai,cram,cram.crai}
 reports/EnsemblVEP/*/*.ann.summary.html
 reports/multiqc_data/fastqc_top_overrepresented_sequences_table.txt
 reports/multiqc_data/multiqc.log
@@ -14,3 +15,5 @@ reports/multiqc_plots/{svg,pdf,png}/*.{svg,pdf,png}
 reports/multiqc_report.html
 reports/snpeff/*/*_snpEff.csv
 reports/snpeff/*/snpEff_summary.html
+variant_calling/**/*.vcf
+variant_calling/**/*.vcf.{gz,gz.tbi}
