--- a/tests/.nftignore
+++ b/tests/.nftignore
@@ -15,5 +15,9 @@ reports/multiqc_plots/{svg,pdf,png}/*.{svg,pdf,png}
 reports/multiqc_report.html
 reports/snpeff/*/*_snpEff.csv
 reports/snpeff/*/snpEff_summary.html
+reports/stats/*/STAR_log/*.Log.final.out
+reports/stats/*/STAR_log/*.Log.out
+reports/stats/*/STAR_log/*.Log.progress.out
+samtools/*.{bam,bam.bai,cram,cram.crai}
 variant_calling/**/*.vcf
 variant_calling/**/*.vcf.{gz,gz.tbi}
